# with_builtin_macros.rs

./: Cargo.toml  README.md  frontend.rs
.devcontainer/: devcontainer.json
examples/: main.rs
src/: Cargo.toml  compile_time_string.rs  lib.rs
src/builtin_macros/: concat.rs  concat_idents.rs  env.rs  include_bytes_from_root.rs  include_from_root.rs  include_str_from_root.rs  option_env.rs  stringify.rs
